--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ option(BUILD_SAMPLES "Will add sample apps to the build process." OFF)
 add_compile_options(-std=c99 -Wall -pedantic)
 
 add_subdirectory(src)
-add_subdirectory(tests)
-if(BUILD_SAMPLES)
-    add_subdirectory(samples)
-endif() #BUILD_SAMPLES
+# add_subdirectory(tests)
+# if(BUILD_SAMPLES)
+#     add_subdirectory(samples)
+# endif() #BUILD_SAMPLES
